# Beekeeper_Monitor

./: .demo_state.json  .gitignore  README.md  db.py  main.py  pyproject.toml  run_live_demo.sh
api/: deps.py  main.py
api/routers/: demo.py  monitoring_alarm_rules.py  monitoring_alarms.py  monitoring_locations.py  monitoring_notifications.py  monitoring_sensors.py  monitoring_weather.py  monitoring_wildfire.py
api/services/: demo_service.py
app/: main.py
beekeeper_dbt/: dbt_project.yml
beekeeper_dbt/snapshots/: sn_apiary.sql  sn_hive.sql  sn_sensor.sql  sn_user.sql
core/: db.py  main.py
dashboard/: app.py
dashboard/_page_backup/: 1_Overview.py  4_Alarm&Notifications.py
dashboard/components/: alarm_overview_section.py  demo_status.py  filter_bar.py  kpi_component.py  notification_overview_section.py  overview_kpis.py  sensor_overview_section.py  time_filter.py  ui_styles.py  weather_overview_section.py  wildfire_overview_section.py
dashboard/pages/: 1_Overview.py  2_Sensors.py  3_Weather&Wildfire.py  4_Alarm&Notifications.py  5_Rule_Management.py  sensors.py
dashboard/services/: alarm_event_service.py  filter_service.py  kpi_service.py  location_service.py  notification_service.py  overview_service.py  rule_management_service.py  sensor_service.py  weather_service.py  wildfire_service.py
dashboard/utils/: api_client.py  config.py  date_utils.py  filter_utils.py  ui.py
db/: init_db.sql
db/seeds/: apiary_seed.sql  (+17 more)
notification/: pipeline.py  repository.py
rule_engine/: evaluator.py  main.py  repository.py
sensors/: hive_sensor_simulator.py
(+105 files in other folders)
