[project]
name = "beekeeper-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-postgres>=1.10.0",
    "fastapi>=0.135.3",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "streamlit-autorefresh>=1.0.1",
    "uvicorn>=0.44.0",
]
